// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"


const name_0 = \\"Todo\\"
const commands_0 = {
  create() {},
  update() {},
  remove() {}
}

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
})

export default aggregates
"
`;

exports[`base config works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import commands_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testCommands.js\\"

const name_0 = \\"Todo\\"

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
})

export default aggregates
"
`;

exports[`base(v2) config works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"



const name_0 = \\"Todo\\"
const commands_0 = {
  create() {},
  update() {},
  remove() {}
}
const name_1 = \\"Item\\"
const commands_1 = {
  create() {},
  update() {},
  remove() {}
}

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
})

aggregates.push({
  name: name_1
, commands: commands_1
})

export default aggregates
"
`;

exports[`base(v2) config works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import commands_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testCommands.js\\"

import commands_1 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testCommands.js\\"

const name_0 = \\"Todo\\"
const name_1 = \\"Item\\"

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
})

aggregates.push({
  name: name_1
, commands: commands_1
})

export default aggregates
"
`;

exports[`config with projection works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"


const name_0 = \\"Todo\\"
const commands_0 = {
  create() {},
  update() {},
  remove() {}
}

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
})

export default aggregates
"
`;

exports[`config with projection works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import commands_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testCommands.js\\"
import projection_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"

const invariantHash_0 = \\"fd94fac3a204e7a84b8cf3ca72e37aaa23c04dc2e1e971d69af2e20e84a40bbc2170931076d4d3e847c571f3be90e47f4c0f48aac76fdcaed083df090285b39d\\"
const name_0 = \\"Todo\\"

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
, projection: projection_0
, invariantHash: invariantHash_0
})

export default aggregates
"
`;

exports[`config with snapshot + process.env works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"


const name_0 = \\"Todo\\"
const commands_0 = {
  create() {},
  update() {},
  remove() {}
}

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
})

export default aggregates
"
`;

exports[`config with snapshot + process.env works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import commands_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testCommands.js\\"

const name_0 = \\"Todo\\"
const snapshotAdapter_0 = {
  \\"module\\": \\"process.env[\\\\\\"AGGREGATE_TODO_SNAPSHOT_ADAPTER\\\\\\"]\\",
  \\"options\\": {
    \\"size\\": \\"process.env[\\\\\\"AGGREGATE_TODO_SNAPSHOT_OPTIONS_SIZE\\\\\\"]\\"
  }
}
const snapshotAdapterModule_0 = interopRequireDefault(
  __non_webpack_require__(snapshotAdapter_0.module)
).default
const snapshotAdapterOptions_0 = snapshotAdapter_0.options

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
, snapshotAdapter: {
    module: snapshotAdapterModule_0,
    options: snapshotAdapterOptions_0
  }
})

export default aggregates
"
`;

exports[`config with snapshot works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"


const name_0 = \\"Todo\\"
const commands_0 = {
  create() {},
  update() {},
  remove() {}
}

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
})

export default aggregates
"
`;

exports[`config with snapshot works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import commands_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testCommands.js\\"

import snapshotAdapterModule_0 from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testSnapshotAdapter.js\\"
const name_0 = \\"Todo\\"
const snapshotAdapterOptions_0 = {\\"size\\":100}

const aggregates = []

aggregates.push({
  name: name_0
, commands: commands_0
, snapshotAdapter: {
    module: snapshotAdapterModule_0,
    options: snapshotAdapterOptions_0
  }
})

export default aggregates
"
`;
